[package]
name = "matrix-crypto-ffi"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "matrix_crypto"

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
hmac = "0.12.1"
http = "0.2.6"
pbkdf2 = "0.11.0"
rand = "0.8.5"
ruma = { version = "0.6.0", features = ["client-api-c"] }
serde = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
thiserror = "1.0.30"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uniffi = "0.17.0"
zeroize = { version = "1.3.0", features = ["zeroize_derive"] }

[dependencies.js_int]
version = "0.2.2"
features = ["lax_deserialize"]

[dependencies.matrix-sdk-common]
path = "../matrix-sdk-common"

[dependencies.matrix-sdk-crypto]
path = "../matrix-sdk-crypto"
features = ["qrcode", "backups_v1"]

[dependencies.matrix-sdk-sled]
path = "../matrix-sdk-sled"
default_features = false
features = ["crypto-store"]

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "e09c93f2c8df9770793abeec57ed984d5e1f3834"

[dependencies.tokio]
version = "1.17.0"
default_features = false
features = ["rt-multi-thread"]

[build-dependencies]
uniffi_build = { version = "0.17.0", features = ["builtin-bindgen"] }

[dev-dependencies]
tempfile = "3.3.0"
