[package]
authors = ["Johannes Becker <j.becker@famedly.com>"]
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
description = "Appservice SDK based on the matrix-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio", "appservice"]
license = "Apache-2.0"
name = "matrix-sdk-appservice"
version = "0.1.0"
rust-version = "1.60"

[features]
default = ["native-tls"]

anyhow = ["matrix-sdk/anyhow"]
e2e-encryption = [
    "matrix-sdk/e2e-encryption"
]
eyre = ["matrix-sdk/eyre"]
sled = ["matrix-sdk/sled"]

markdown = ["matrix-sdk/markdown"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
socks = ["matrix-sdk/socks"]
sso-login = ["matrix-sdk/sso-login"]

docs = []

[dependencies]
dashmap = "5.2.0"
http = "0.2.6"
matrix-sdk = { version = "0.5.0", path = "../matrix-sdk", default-features = false, features = ["appservice"] }
percent-encoding = "2.1.0"
regex = "1.5.5"
ruma = { git = "https://github.com/ruma/ruma", rev = "ca8c66c885241a7ba3805399604eda4a38979f6b", features = ["client-api-c", "appservice-api-s"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread"] }
thiserror = "1.0.30"
tracing = "0.1.34"
url = "2.2.2"
warp = { version = "0.3.2", default-features = false }

[dev-dependencies]
matrix-sdk-test = { version = "0.5.0", path = "../matrix-sdk-test", features = ["appservice"] }
tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.11"
wiremock = "0.5.13"
