[package]
authors = ["Johannes Becker <j.becker@famedly.com>"]
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
description = "Appservice SDK based on the matrix-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio", "appservice"]
license = "Apache-2.0"
name = "matrix-sdk-appservice"
version = "0.1.0"
rust-version = { workspace = true }
publish = false

[features]
default = ["native-tls"]

anyhow = ["matrix-sdk/anyhow"]
e2e-encryption = [
    "matrix-sdk/e2e-encryption"
]
eyre = ["matrix-sdk/eyre"]
sled = ["matrix-sdk/sled"]

markdown = ["matrix-sdk/markdown"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
socks = ["matrix-sdk/socks"]
sso-login = ["matrix-sdk/sso-login"]

docs = []

[dependencies]
axum = { version = "0.6.1", default-features = false, features = ["json"] }
dashmap = { workspace = true }
http = { workspace = true }
http-body = "0.4.5"
hyper = { version = "0.14.20", features = ["http1", "http2", "server"] }
matrix-sdk = { version = "0.6.0", path = "../matrix-sdk", default-features = false, features = ["appservice"] }
regex = "1.5.5"
ruma = { workspace = true, features = ["appservice-api-s"] }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.4"
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { workspace = true }
tower = { version = "0.4.13", default-features = false }
tracing = { workspace = true }
url = "2.2.2"

[dev-dependencies]
matrix-sdk-test = { version = "0.6.0", path = "../../testing/matrix-sdk-test", features = ["appservice"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.11"
wiremock = "0.5.13"
