[package]
authors = ["Jorge Martín Espinosa <jorgem@element.io>"]
description = "Optional crate used to allow scanning the contents of media to prevent malware infections"
name = "matrix-sdk-contentscanner"
version = "0.18.0"
edition = "2024"
license = "Apache-2.0"
rust-version.workspace = true

[features]
default = ["rustls-aws-lc-rs"]
e2e-encryption = []
uniffi = ["dep:uniffi", "matrix-sdk/uniffi"]

rustls-aws-lc-rs = ["matrix-sdk/rustls-aws-lc-rs"]

[dependencies]
assert_matches2.workspace = true
matrix-sdk = { workspace = true, features = ["e2e-encryption", "testing"] }
matrix-sdk-crypto.workspace = true
ruma = { workspace = true, features = ["client-api"] }
serde.workspace = true
tracing.workspace = true
uniffi = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
matrix-sdk-test.workspace = true
wiremock.workspace = true

[lints]
workspace = true
