[package]
authors = ["Travis Ralston <travis@matrix.org>"]
description = "matrix-sdk-crypto crate for Node JS"
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-crypto-nodejs"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
rust-version = "1.56"
version = "0.1.0"

[lib]
crate-type=["cdylib"]

[dependencies]
napi-derive = { version = "2.0.0", features = ["full"] }
napi = { version = "2.0.0", features = ["full"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
http = "0.2.4"

# For some reason the futures lib is missing in published builds, so copy the dep from
# the matrix-sdk-crypto crate.
futures = { version = "0.3.15", default-features = false, features = ["executor"] }

[dependencies.matrix-sdk-crypto]
version = "0.4.1"
default_features = false
features = ["sled_cryptostore", "backups_v1"]

# use git for release mode
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8129b7190bcf6f6fb568a35870f6f5728f1401c8"

# use path in local development mode
#path = "../matrix-sdk-crypto"

[dependencies.matrix-sdk-common]
version = "0.4.1"

# use git for release mode
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8129b7190bcf6f6fb568a35870f6f5728f1401c8"

# use path in local development mode
#path = "../matrix-sdk-common"

[dependencies.ruma]
git = "https://github.com/ruma/ruma/"
rev = "fdbc4d6d1dd273c8a6ac95b329943ed8c68df70d"
features = ["client-api-c"]

[dependencies.tokio]
version = "1.7.1"
default_features = false
features = ["rt-multi-thread"]

[build-dependencies]
napi-build = "1.2.1"
